
-------------------------------------------------------------------------------

* Changes in Cdecl 14.1

** Alternative tokens
Blocks, lambda captures, and reference functions now correctly print
alternative tokens when the option is enabled.

** Alternative tokens vs. di/trigraphs
If both alternative token and either di/trigraph options are set, alternative
tokens now have priority.

** Di/Trigraphs
Now correctly emitting di/trigraphs for lambda captures and `operator[]`.

** Debug output
The format of the debug output has been made more JSON5-like.

** Limit when `q` means `quit`
The `q` command is now recognized as a synonym for `quit` only when it's the
only thing on a line other than whitespace.  This now allows things like:

    cdecl> declare p, q as pointer to int
    int *p, *q;

to work without complaining that `q` is a **cdecl** keyword.

** Trailing return type
New `--trailing-return` and `-R` command-line options and `trailing-return`
`set` option enable printing a function's or operator's return type using the
trailing return type syntax in C++11 and later.

** Verbose version
If either the `--version` or `-v` is given twice, additionally prints the set
of `configure` feature & package options and whether GNU readline (if compiled
in) is genuine.

** Fixed explicit constructor with unecessary `()`
A declaration like:

    explain explicit (C)(int)

that's an explicit constructor with unnecessary `()` caused a crash.  Fixed.


* Changes in Cdecl 14.0

** Autocompletion bell
When hitting TAB and there are no completion matches, **cdecl** now rings the
terminal's bell.

** Cast into array
Now correctly allowing casting into an array when there is no name:

    cdecl> explain (char const *const[])
    cast into array of constant pointer to constant character

** Destructors in C
**Cdecl** now correctly reports destructors in C as an error.

** Digraph & trigraph fixes
The digraphs and trigraphs for `{` and `}` weren't emitted when they should