@@ -33,7 +33,7 @@
 .if !'\\$1'0' .sp
 ..
 .\" ---------------------------------------------------------------------------
-.TH \f3cdecl\fP 1 "March 27, 2023" "PJL TOOLS"
+.TH \f3cdecl\fP 1 "March 30, 2023" "PJL TOOLS"
 .SH NAME
 cdecl, c++decl \- compose and decipher C & C++ declarations and casts
 .SH SYNOPSIS
@@ -728,7 +728,7 @@ and
 has the following commands:
 .RS 4
 .TP 4
-.BR cast " \f2s-name\fP" "" " {" as |[ in ] to "} " \f2english\fP
+.BR cast " [" \f2s-name\fP "] " { as |[ in ] to "} " \f2english\fP
 Composes a C (or C++) cast from pseudo-English.
 .TP
 .RB { const | dynamic | reinterpret | static } " cast \f2s-name\fP" " {" as |[ in ] to "} " \f2english\fP
