@@ -130,10 +130,9 @@ static void print_h( char const *line ) {
 static void print_help_commands( void ) {
   print_h( "command:\n" );
 
-  print_h( "  " );
+  print_h( "  cast [<name>] {as|[in]to} <english>\n" );
   if ( OPT_LANG_IS( CPP_ANY ) )
-    print_h( "[const | dynamic | reinterpret | static] " );
-  print_h( "cast <name> {as|[in]to} <english>\n" );
+    print_h( "  {const | dynamic | reinterpret | static} cast <name> {as|[in]to} <english>\n" );
 
   print_h( "  declare <name> [, <name>]* as <english> " );
   if ( OPT_LANG_IS( ALIGNMENT ) )
